<resources>
    <string name="app_name">™”ƒ‚¢•¨ãŽè™</string>
    <string name="action_settings">“X•Üî•ñ“o˜^</string>
    
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
        <string name="preference_title">Ý’èƒŠƒXƒg</string>

    <string name="shop1_name_ttl">ž“X•Ü‚P‚Ì–¼Ì</string>
    <string name="shop1_name_sum"> “X•Ü‚P‚Ì–¼Ì‚ð“o˜^\n —ájABCƒX[ƒp[</string>
    <string name="shop1_name_dlg">“X•Ü‚P‚Ì–¼Ì“o˜^</string>

    <string name="shop1_md_ttl">ž“X•Ü‚P‚ÌŠ„ˆøi›“OFFj</string>
    <string name="shop1_md_sum"> “X•Ü‚P‚ÌŠ„ˆø”‚ð“o˜^\n —áj10%OFF‚Ìê‡A10‚ð“ü—Í</string>
    <string name="shop1_md_dlg">“X•Ü‚P‚ÌŠ„ˆø“o˜^\n(—LŒø”ÍˆÍF0`99)</string>

    <string name="shop1_point_ttl">ž“X•Ü‚P‚ÌÎß²ÝÄ’P‰¿iÎß²ÝÄ^‰~j</string>
    <string name="shop1_point_sum"> “X•Ü‚P‚ÌÎß²ÝÄ’P‰¿‚ð“o˜^\n —áj200‰~‚Å1ƒ|ƒCƒ“ƒg‚Ìê‡A200‚ð“ü—Í</string>
    <string name="shop1_point_dlg">“X•Ü‚P‚ÌÎß²ÝÄ’P‰¿“o˜^\n(—LŒø”ÍˆÍF0`999)</string>

    <string name="shop1_mult_ttl">ž“X•Ü‚P‚ÌÎß²ÝÄ”{”</string>
    <string name="shop1_mult_sum"> “X•Ü‚P‚ÌÎß²ÝÄ”{”‚ð“o˜^\n —áj5”{‚Ìê‡A5‚ð“ü—Í</string>
    <string name="shop1_mult_dlg">“X•Ü‚P‚ÌÎß²ÝÄ”{”“o˜^\n(—LŒø”ÍˆÍF0`99)</string>

    <string name="shop2_name_ttl">Ÿ“X•Ü‚Q‚Ì–¼Ì</string>
    <string name="shop2_name_sum"> “X•Ü‚Q‚Ì–¼Ì‚ð“o˜^\n —ájABCƒX[ƒp[</string>
    <string name="shop2_name_dlg">“X•Ü‚Q‚Ì–¼Ì“o˜^</string>

    <string name="shop2_md_ttl">Ÿ“X•Ü‚Q‚ÌŠ„ˆøi›“OFFj</string>
    <string name="shop2_md_sum"> “X•Ü‚Q‚ÌŠ„ˆø”‚ð“o˜^\n —áj10%OFF‚Ìê‡A10‚ð“ü—Í</string>
    <string name="shop2_md_dlg">“X•Ü‚Q‚ÌŠ„ˆø“o˜^\n(—LŒø”ÍˆÍF0`99)</string>

    <string name="shop2_point_ttl">Ÿ“X•Ü‚Q‚ÌÎß²ÝÄ’P‰¿iÎß²ÝÄ^‰~j</string>
    <string name="shop2_point_sum"> “X•Ü‚Q‚ÌÎß²ÝÄ’P‰¿‚ð“o˜^\n —áj200‰~‚Å1ƒ|ƒCƒ“ƒg‚Ìê‡A200‚ð“ü—Í</string>
    <string name="shop2_point_dlg">“X•Ü‚Q‚ÌÎß²ÝÄ’P‰¿“o˜^\n(—LŒø”ÍˆÍF0`999)</string>

    <string name="shop2_mult_ttl">Ÿ“X•Ü‚Q‚ÌÎß²ÝÄ”{”</string>
    <string name="shop2_mult_sum"> “X•Ü‚Q‚ÌÎß²ÝÄ”{”‚ð“o˜^\n —áj5”{‚Ìê‡A5‚ð“ü—Í</string>
    <string name="shop2_mult_dlg">“X•Ü‚Q‚ÌÎß²ÝÄ”{”“o˜^\n(—LŒø”ÍˆÍF0`99)</string>

    <string name="shop3_name_ttl">ž“X•Ü‚R‚Ì–¼Ì</string>
    <string name="shop3_name_sum"> “X•Ü‚R‚Ì–¼Ì‚ð“o˜^\n —ájABCƒX[ƒp[</string>
    <string name="shop3_name_dlg">“X•Ü‚R‚Ì–¼Ì“o˜^</string>

    <string name="shop3_md_ttl">ž“X•Ü‚R‚ÌŠ„ˆøi›“OFFj</string>
    <string name="shop3_md_sum"> “X•Ü‚R‚ÌŠ„ˆø”‚ð“o˜^\n —áj10%OFF‚Ìê‡A10‚ð“ü—Í</string>
    <string name="shop3_md_dlg">“X•Ü‚R‚ÌŠ„ˆø“o˜^\n(—LŒø”ÍˆÍF0`99)</string>

    <string name="shop3_point_ttl">ž“X•Ü‚R‚ÌÎß²ÝÄ’P‰¿iÎß²ÝÄ^‰~j</string>
    <string name="shop3_point_sum"> “X•Ü‚R‚ÌÎß²ÝÄ’P‰¿‚ð“o˜^\n —áj200‰~‚Å1ƒ|ƒCƒ“ƒg‚Ìê‡A200‚ð“ü—Í</string>
    <string name="shop3_point_dlg">“X•Ü‚R‚ÌÎß²ÝÄ’P‰¿“o˜^\n(—LŒø”ÍˆÍF0`999)</string>

    <string name="shop3_mult_ttl">ž“X•Ü‚R‚ÌÎß²ÝÄ”{”</string>
    <string name="shop3_mult_sum"> “X•Ü‚R‚ÌÎß²ÝÄ”{”‚ð“o˜^\n —áj5”{‚Ìê‡A5‚ð“ü—Í</string>
    <string name="shop3_mult_dlg">“X•Ü‚R‚ÌÎß²ÝÄ”{”“o˜^\n(—LŒø”ÍˆÍF0`99)</string>


    <string name="btn_cal">ŒvŽZ</string>
    <string name="text_price">‹àŠz</string>
    <string name="text_price_unit">\n‰~</string>

    <string name="text_shopprice_1"> Žx•¥‹àŠz\n(ŒÂ•Ê) </string>
    <string name="text_shopunit_1">\n‰~</string>

    <string name="text_shopprice_2"> Žx•¥‹àŠz\n(ŒÂ•Ê) </string>
    <string name="text_shopunit_2">\n‰~</string>

    <string name="text_shopprice_3"> Žx•¥‹àŠz\n(ŒÂ•Ê) </string>
    <string name="text_shopunit_3">\n‰~</string>
</resources>