<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="#ffffff"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_status"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_status">

        <Button
            android:id="@+id/btn_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/input_price"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_grad"
            android:elevation="0dp"
            android:onClick="onCalExec"
            android:text="@string/btn_cal"
            android:textColor="#767676"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/input_price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/text_price"
            android:layout_toRightOf="@+id/text_price"
            android:ems="10"
            android:inputType="number"
            android:textSize="24dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_price_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/input_price"
            android:layout_toRightOf="@+id/input_price"
            android:text="@string/text_price_unit"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_price"
            android:textSize="24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay_shop1"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lay1"
        android:layout_marginTop="5dp"
        android:background="#FFF5E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay1">

        <CheckBox
            android:id="@+id/check_mdshop_1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/text_shopinfo_1"
            android:layout_toRightOf="@+id/text_shopinfo_1"
            android:text="〇〇% OFF"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/check_pointshop_1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/check_mdshop_1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/text_shopinfo_1"
            android:layout_toRightOf="@+id/text_shopinfo_1"
            android:text="ﾎﾟｲﾝﾄ〇〇倍"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/input_shopprice_1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_pointshop_1"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/text_shopunit_1"
            android:layout_toLeftOf="@+id/text_shopunit_1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="17dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_shopinfo_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/text_shopprice_1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/input_shopprice_1"
            android:layout_toLeftOf="@+id/input_shopprice_1"
            android:text="店舗情報１" />

        <TextView
            android:id="@+id/text_shopresult_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/input_shopprice_1"
            android:layout_toLeftOf="@+id/text_shopprice_1"
            android:layout_toStartOf="@+id/text_shopprice_1"
            android:text="損得結果１"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text_shopprice_1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/check_pointshop_1"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/input_shopprice_1"
            android:layout_toStartOf="@+id/input_shopprice_1"
            android:text="@string/text_shopprice_1" />

        <TextView
            android:id="@+id/text_shopunit_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_pointshop_1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/text_shopunit_1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay_shop2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lay_shop1"
        android:layout_marginTop="5dp"
        android:background="#FFECCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_shop1">

        <CheckBox
            android:id="@+id/check_mdshop_2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/text_shopinfo_2"
            android:layout_toRightOf="@+id/text_shopinfo_2"
            android:text="〇〇% OFF"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/check_pointshop_2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/check_mdshop_2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/text_shopinfo_2"
            android:layout_toRightOf="@+id/text_shopinfo_2"
            android:text="ﾎﾟｲﾝﾄ〇〇倍"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/input_shopprice_2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_pointshop_2"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/text_shopunit_2"
            android:layout_toLeftOf="@+id/text_shopunit_2"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="17dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_shopinfo_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/text_shopprice_2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/input_shopprice_2"
            android:layout_toLeftOf="@+id/input_shopprice_2"
            android:text="店舗情報２" />

        <TextView
            android:id="@+id/text_shopresult_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/input_shopprice_2"
            android:layout_toLeftOf="@+id/text_shopprice_2"
            android:layout_toStartOf="@+id/text_shopprice_2"
            android:text="損得結果２"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text_shopprice_2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/check_pointshop_2"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/input_shopprice_2"
            android:layout_toStartOf="@+id/input_shopprice_2"
            android:text="@string/text_shopprice_2" />

        <TextView
            android:id="@+id/text_shopunit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/check_pointshop_2"
            android:text="@string/text_shopunit_2" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lay_shop3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lay_shop2"
        android:layout_marginTop="5dp"
        android:background="#FFF5E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_shop2">

        <CheckBox
            android:id="@+id/check_mdshop_3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/text_shopinfo_3"
            android:layout_toRightOf="@+id/text_shopinfo_3"
            android:text="〇〇% OFF"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/check_pointshop_3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/check_mdshop_3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/text_shopinfo_3"
            android:layout_toRightOf="@+id/text_shopinfo_3"
            android:text="ﾎﾟｲﾝﾄ〇〇倍"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/input_shopprice_3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_pointshop_3"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/text_shopunit_3"
            android:layout_toLeftOf="@+id/text_shopunit_3"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="17dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_shopinfo_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/text_shopprice_3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/input_shopprice_3"
            android:layout_toLeftOf="@+id/input_shopprice_3"
            android:text="店舗情報３" />

        <TextView
            android:id="@+id/text_shopresult_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/input_shopprice_3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/text_shopprice_3"
            android:layout_toLeftOf="@+id/text_shopprice_3"
            android:text="損得結果３"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/text_shopprice_3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/check_pointshop_3"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/input_shopprice_3"
            android:layout_toStartOf="@+id/input_shopprice_3"
            android:text="@string/text_shopprice_3" />

        <TextView
            android:id="@+id/text_shopunit_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/check_pointshop_3"
            android:text="@string/text_shopunit_3" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>